[package]
name = "rshapes"
version = "0.1.0"
edition = "2021"
autobenches = true
authors = ["Leonid Meleshin <leon@senseshift.io>"]

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version = "^0.32.3"}
num = "^0.4.1"
ordered-float = "^4.2.0"

array-init = "^2.1.0"
derivative = "^2.2.0"
getset = "^0.1.2"

[dev-dependencies]
criterion = { version = "^0.5", features = ["html_reports"] }
nalgebra = { version = "^0.32.3", features = ["proptest"] }
proptest = "1"
proptest-derive = "^0.4.0"
test-case = "3"
test-strategy = "^0.3.1"

[[bench]]
name = "within"
harness = false

[[bench]]
name = "distance_to_point"
harness = false
