[package]
name = "rshapes"
version = "0.1.0"
edition = "2021"
autobenches = true
authors = ["Leonid Meleshin <leon@senseshift.io>"]

[lib]
bench = false

[features]
serde-serialize = ["dep:serde", "nalgebra/serde-serialize"]

[dependencies]
nalgebra = {version = "^0.32.3"}
num = "^0.4.1"
ordered-float = "^4.2.0"

serde = { version = "1.0", default-features = false, features = [ "derive" ], optional = true }
array-init = "^2.1.0"
derivative = "^2.2.0"
getset = "^0.1.2"

[dev-dependencies]
criterion = { version = "^0.5", features = ["html_reports"] }
nalgebra = { version = "^0.32.3", features = ["proptest"] }
proptest = "1"
proptest-derive = "^0.4.0"
test-case = "3"
test-strategy = "^0.3.1"
mutants = "^0.0.3"

[[bench]]
name = "within"
harness = false

[[bench]]
name = "distance_to_point"
harness = false
