[package]
name = "rshapes"
version = "0.1.0"
edition = "2021"
autobenches = true
authors = ["Leonid Meleshin <leon@senseshift.io>"]

[lib]
bench = false

[features]
serde-serialize = ["dep:serde", "nalgebra/serde-serialize"]
proptest-support = [ "dep:proptest", "dep:proptest-derive", "nalgebra/proptest-support" ]

[dependencies]
nalgebra = { version = "^0.32.3" }
num = "^0.4.1"
ordered-float = "^4.2.0"

proptest = { version = "1", optional = true, default-features = false, features = ["std"] }
proptest-derive = { version = "^0.4.0", optional = true }

serde = { version = "1.0", default-features = false, features = [ "derive" ], optional = true }
array-init = "^2.1.0"
derivative = "^2.2.0"
getset = "^0.1.2"

[dev-dependencies]
criterion = { version = "^0.5", features = ["html_reports"] }
test-case = "3"
test-strategy = "^0.3.1"
mutants = "^0.0.3"
serde_json = "1.0.116"

rshapes = { path = ".", features = ["proptest-support", "serde-serialize"] }

[[bench]]
name = "within"
harness = false

[[bench]]
name = "distance_to_point"
harness = false
